--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
 html {
-    background-color: aqua;
+    background-color: rgb(7, 6, 39);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
